; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/msconfig/extr_freeldrpage.c_InitializeFreeLDRDialog.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/msconfig/extr_freeldrpage.c_InitializeFreeLDRDialog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATH_MAX = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @InitializeFreeLDRDialog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @InitializeFreeLDRDialog(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %8 = load i32, i32* @PATH_MAX, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %4, align 8
  %11 = alloca i32, i64 %9, align 16
  store i64 %9, i64* %5, align 8
  store i32* null, i32** %6, align 8
  %12 = load i32, i32* @PATH_MAX, align 4
  %13 = call i32 @GetWindowsDirectoryW(i32* %11, i32 %12)
  %14 = call i32* @wcschr(i32* %11, i32 92)
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %1
  %18 = load i32, i32* @FALSE, align 4
  store i32 %18, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %24

19:                                               ; preds = %1
  %20 = load i32*, i32** %6, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 1
  store i32 0, i32* %21, align 4
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @LoadBootIni(i32* %11, i32 %22)
  store i32 %23, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %24

24:                                               ; preds = %19, %17
  %25 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %25)
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @GetWindowsDirectoryW(i32*, i32) #2

declare dso_local i32* @wcschr(i32*, i32) #2

declare dso_local i32 @LoadBootIni(i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
